additional-policies/ford/require-high-availability.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ford-require-high-availability
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Require Multiple Replicas
    policies.kyverno.io/category: Ford - App
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/description: >-
      Deployments with a single replica cannot be highly available and thus the application
      may suffer downtime if that one replica goes down.This policy validates that Deployments
      have more than one replica.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: deployment-has-multiple-replicas
      match:
        resources:
          kinds:
            - Deployment
            - StatefulSet
          namespaceSelector:
            matchExpressions:
              - key: ibm.com/kyverno
                operator: Exists
      exclude:
        any:
          - resources:
              selector:
                matchLabels:
                  ibm.com/singleton: "true"
      validate:
        message: "StatefulSets/Deployments should have more than one replica to ensure availability."
        pattern:
          spec:
            replicas: ">=2 | 0"
